Creación de la clase ItemVenta que maneja la relación entre Venga y Poducto y permite persistir datos relevantes del producto en el momento de la venta, el precio y la cantidad, Cambio en las relaciones entre entidades siendo que Venta hace un OneToMany a ItemVenta y que ItemVenta hace un ManyToOne a Producto. Se han creado el resto de endpoints para cumplir con las especificaciones del enunciado.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=TiendaAPI
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
